Updates to documentation and open design

--- a/_pages/fr/design-libre.html
+++ b/_pages/fr/design-libre.html
@@ -6,9 +6,9 @@ permalink: /fr/design-libre.html
 ---
 
 <h1 property="name" id="wb-cont">Design libres</h1>
-<p>Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.</p>
-<p>Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.</p>
-<p>Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./design-libre-formulaire.html">Formulaire de Design Libre</a>.</p>
+<p>Un design libre est un design pour un produit généralement physique dont le développement suit un processus semblable au code et logiciel libre. La licence du design permet d’y accéder librement, de créer des travaux dérivés, de modifier le design et de le redistribuer.</p>
+<p>Consultez la liste des designs libres utilisés par les administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un design ou <strong>modifier</strong> ses informations en utilisant le <a href="./design-libre-formulaire.html">Formulaire de Design Libre</a>.</p>
 <p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include designTable.html %}
