--- a/_pages/fr/recherches-libres.html
+++ b/_pages/fr/recherches-libres.html
@@ -6,9 +6,9 @@ permalink: /fr/recherches-libres.html
 ---
 
 <h1 property="name" id="wb-cont">Recherches libres</h1>
-<p>Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.</p>
-<p>Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.</p>
-<p>Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./recherche-libre-formulaire.html">Formulaire de Recherche Libre</a>.</p>
+<p>Une recherche libre est une recherche ou tout individu ou organisation ayant une expertise appropriée peux contribuer et toutes les données résultantes sont disponibles au public.</p>
+<p>Consultez la liste des recherches libres utilisés par les administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> une recherche ou <strong>modifier</strong> ses informations en utilisant le <a href="./recherche-libre-formulaire.html">Formulaire de Recherche Libre</a>.</p>
 <p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include researchTable.html %}
