--- a/_pages/en/open-researches.html
+++ b/_pages/en/open-researches.html
@@ -6,7 +6,7 @@ permalink: /en/open-researches.html
 ---
 
 <h1 property="name" id="wb-cont">Open Research</h1>
-<p>Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
+<p>Open research refers to any research where anyone with relevant expertise is allowed to contribute and the resulting data is available to everyone online.</p>
 <p>Search the catalog for research by different levels of Canadian public administrations.</p>
 <p>You may also <strong>add</strong> a research or <strong>update</strong> its data using using the <a href="./open-research-form.html">Open Research Form</a>.</p>
 <p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
