--- a/_pages/en/open-source-softwares.html
+++ b/_pages/en/open-source-softwares.html
@@ -6,7 +6,7 @@ permalink: /en/open-source-softwares.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
-<p>Open source software refers to a software that is released under a license grating anyone permission to use, modify, change or redistribute its source code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
+<p>Open source software refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute its source code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
 <p>Search the catalog for open source software that are used by different levels of Canadian public administrations.</p>
 <p>You may also <strong>add</strong> a software or <strong>update</strong> its data using the <a href="./open-source-software-form.html">Open Source Software Form</a>.</p>
 <p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
