--- a/_pages/fr/design-libre-formulaire.html
+++ b/_pages/fr/design-libre-formulaire.html
@@ -7,4 +7,4 @@ config: config-design
 ---
 
 <h1 property="name" id="wb-cont">Formulaire du Design libre</h1>
-<p>Remplissez ce formulaire pour ajouter ou modifier des données sur les logiciels libres utilisés par les administrations publiques canadiennes. Veuillez noter que quelques champs sont requis dans les deux langues Français et Anglais, afin de promouvoir la collaboration et la partage de solutions ouvertes à travers tout le Canada. </p>
+<p>Remplissez ce formulaire pour ajouter ou modifier des données sur les designs libres utilisés par les administrations publiques canadiennes. Veuillez noter que quelques champs sont requis dans les deux langues Français et Anglais, afin de promouvoir la collaboration et la partage de solutions ouvertes à travers tout le Canada. </p>
