Prettified code and additions to readMe concerning open design and open research

--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -72,7 +72,7 @@ permalink: /fr/docs.html
             <li>Vous pouvez également filtrer les noms et les descriptions des logiciels libres présentés dans le catalogue selon une phrase, un mot ou une lettre de votre choix.</li>
           </ul>
           <p><strong>Vous désirez ajouter une nouvelle recherche libre au catalogue ou vous inscrire à la liste des participants de l’une des recherches partagées?</strong></p>
-          <p>Que vous soyez une administration ayant déjà contribué à cette plateforme ou une administration désirant participer pour le première fois à la contribution de celle-ci, vous êtes libre d’ajouter un nouveau projet au catalogue ou de vous inscrire à la liste des participant a l’une des recherches libres déjà partagées. Il vous suffit de remplir le formulaire <a href="./recherche-libre-formulaire.html">Formulaire du Recherche Libre</a> permettant d’identifier votre requête et d’exécuter celle-ci. Remplissez les champs s’alignant avec votre requête et soumettez le formulaire.</p>
+          <p>Que vous soyez une administration ayant déjà contribué à cette plateforme ou une administration désirant participer pour le première fois à la contribution de celle-ci, vous êtes libre d’ajouter un nouveau projet au catalogue ou de vous inscrire à la liste des participant a l’une des recherches libres déjà partagées. Il vous suffit de remplir le formulaire <a href="./recherche-libre-formulaire.html">Formulaire des Recherches Libres</a> permettant d’identifier votre requête et d’exécuter celle-ci. Remplissez les champs s’alignant avec votre requête et soumettez le formulaire.</p>
         </details>
       </li>
       <li>
