--- a/_pages/fr/recherche-libre-schema.html
+++ b/_pages/fr/recherche-libre-schema.html
@@ -5,3 +5,11 @@ lang: fr
 permalink: /fr/recherche-libre-schema.html
 config: config-research
 ---
+
+<h1 property="name" id="wb-cont">Schéma de métadonnées pour les recherches libres</h1>
+<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.research.link[page.lang] }}">{{ site.data.i18n.general.nav.research[page.lang] }}</a>.</p>
+<p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
+
+<h2>Version 1.0</h2>
+<p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
+<p>Nous avons créé un <a href="http://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/research_mandatory.yml" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
