Minor fixes to open-research

--- a/_pages/en/open-researches.html
+++ b/_pages/en/open-researches.html
@@ -13,4 +13,4 @@ permalink: /en/open-researches.html
 
 {% include researchTable.html %}
 
-<p>Data is also made available in <a href="../code.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
+<p>Data is also made available in <a href="../research.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
