Added open-portal page with links provided in Issue #831

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -113,6 +113,12 @@ permalink: /en/index.html
             Governmental groups across the world have also developed collaborative platforms for sharing open source solutions between public administrations in a country or region. For more information about those platforms, you can check our non-exhaustive <a href="./catalog.html">list of international catalogs for open source solutions</a>.
         </details>
       </li>
+      <li>
+        <details open>
+          <summary>Open portals from canadian public administrations</summary>
+          Check the list of <a href="./open-portal.html">open portals from canadian public administrations</a> to find other open portals 
+        </details>
+      </li>
     </ul>
   </div>
 </div>
