--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -113,6 +113,12 @@ permalink: /fr/index.html
             Des administrations gouvernementales à travers le monde ont aussi pris l’initiative de développer des plateformes de collaboration et de partage de solutions numériques ouvertes entre plusieurs unités administratives du pays ou de la région dans laquelle elles se situent. Pour plus d’informations, consultez la liste non-exhaustive de <a href="./catalogue.html">catalogues internationaux pour les solutions ouvertes</a>.
         </details>
       </li>
+      <li>
+        <details open>
+          <summary>Portails ouverts des administrations publiques canadiennes</summary>
+          Consultez la liste des <a href="./portail-ouvert.html">portails ouverts des administrations publiques canadiennes</a> pour trouvez d'autres portails ouverts 
+        </details>
+      </li>
     </ul>
   </div>
 </div>
