Modified open portals section of index

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -115,8 +115,9 @@ permalink: /en/index.html
       </li>
       <li>
         <details open>
-          <summary>Open portals from canadian public administrations</summary>
-          Check the list of <a href="./open-portal.html">open portals from canadian public administrations</a> to find other open portals 
+          <summary>List of open portals from canadian public administrations</summary>
+          Canadian public administrations have created open portals to make accessing their data and information easier for the public.
+          Check the <a href="./open-portal.html">list of open portals from canadian public administrations</a> to find the available open portals.
         </details>
       </li>
     </ul>
