--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -115,8 +115,9 @@ permalink: /fr/index.html
       </li>
       <li>
         <details open>
-          <summary>Portails ouverts des administrations publiques canadiennes</summary>
-          Consultez la liste des <a href="./portail-ouvert.html">portails ouverts des administrations publiques canadiennes</a> pour trouvez d'autres portails ouverts 
+          <summary>Liste des portails ouverts des administrations publiques canadiennes</summary>
+          Les administrations publiques canadiennes ont créées des portails ouverts pour faciliter l'accès à leurs données et informations.
+          Consultez la <a href="./portail-ouvert.html">liste des portails ouverts des administrations publiques canadiennes</a> pour trouver les portails ouverts disponibles.
         </details>
       </li>
     </ul>
