--- a/_pages/en/open-researches.html
+++ b/_pages/en/open-researches.html
@@ -5,7 +5,7 @@ lang: en
 permalink: /en/open-researches.html
 ---
 
-<h1 property="name" id="wb-cont">Open Research</h1>
+<h1 property="name" id="wb-cont">Open Researches</h1>
 <p>Open research refers to any research where anyone with relevant expertise is allowed to contribute and the resulting data is available to everyone online.</p>
 <p>Search the catalog for research by different levels of Canadian public administrations.</p>
 <p>You may also <strong>add</strong> a research or <strong>update</strong> its data using using the <a href="./open-research-form.html">Open Research Form</a>.</p>
