Added links to https://open.canada.ca/en/maps/open-data-canada and french equivalent in open-portal

--- a/_pages/en/open-portal.html
+++ b/_pages/en/open-portal.html
@@ -14,6 +14,9 @@ permalink: en/open-portal.html
         <div class="col-md-12"><h3 property="name">Open Government</h3></div>    
         <p><strong><a href="https://open.canada.ca/en">Open Government</a></strong> aims to have government be as accessible as possible for the general public. This means making government data and information available to the public
         </p>
+        <p>
+            For additionnal information on <a href="https://open.canada.ca/en/maps/open-data-canada">open governments across Canada</a>
+        </p>
     </div>
     
     <div class="row profile">
