--- a/_pages/fr/portail-ouvert.html
+++ b/_pages/fr/portail-ouvert.html
@@ -12,7 +12,7 @@ permalink: fr/portail-ouvert.html
     <div class="row profile">
         <div class="col-md-12"><h3 property="name">Gouvernement Ouvert</h3></div>    
     
-        <p>Le <strong><a href="https://open.canada.ca/fr">Gouvernement Ouvert </a></strong> vise a avoir un gouvernement plus accessible au public. C'est fait en donnant plus d'accès aux données et informations gouvernementales
+        <p>Le <strong><a href="https://open.canada.ca/fr">Gouvernement Ouvert </a></strong> vise à avoir un gouvernement plus accessible au public. C'est fait en donnant plus d'accès aux données et informations gouvernementales
         </p>
         <p>
             Pour plus d'informations concernant les <a href="https://ouvert.canada.ca/fr/cartes/donnees-ouvertes-au-canada">gouvernements ouverts à travers le Canada</a>
