--- a/_pages/en/open-portal.html
+++ b/_pages/en/open-portal.html
@@ -7,7 +7,7 @@ permalink: en/open-portal.html
 
 <div class="row profile">
     <div class="col-md-12">
-        <h1 property="name">Open Portals</h1> 
+        <h1 property="name"id="wb-cont">Open Portals</h1> 
     </div>
 
     <div class="row profile">
