--- a/_pages/fr/portail-ouvert.html
+++ b/_pages/fr/portail-ouvert.html
@@ -7,7 +7,7 @@ permalink: fr/portail-ouvert.html
 
 <div class="row profile">
     <div class="col-md-12">
-        <h1 property="name"id="#wb-cont">Portails Ouverts</h1> 
+        <h1 property="name" id="wb-cont">Portails Ouverts</h1> 
     </div>
     <div class="row profile">
         <div class="col-md-12"><h3 property="name">Gouvernement Ouvert</h3></div>    
