Multiples changes on file in open research

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -87,6 +87,29 @@ permalink: /en/index.html
         </div>
       </section>
     </div>
+
+
+
+    <div class="col-md-6">
+      <section class="panel panel-success hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.research.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Research</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #3c763d">
+            <a href="{{ site.data.i18n.general.nav.research.link[page.lang] }}" class="panel-design"><i class="fa fa-book-reader"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open source research used by Canadian public administrations.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+ 
+
+
+
+
   </div>
 
   <div class="col-md-12">
