--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -37,6 +37,23 @@ permalink: /fr/index.html
         </div>
       </section>
     </div>
+    
+    <div class="row wb-eqht">
+      <div class="col-md-6">
+        <section class="panel panel-info hght-inhrt">
+          <header class="panel-heading">
+            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Design Libres</h5></a>
+          </header>
+          <div class="panel-body">
+            <div class="col-md-3 font-size-50" style="color: #31708f">
+              <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
+            </div>
+            <div class="col-md-9">
+              <p>Consultez les design libres utilisés par les niveaux du Gouvernement Canadien.</p>
+            </div>
+          </div>
+        </section>
+      </div>
 
     <div class="col-md-6">
       <section class="panel panel-success hght-inhrt">
