Added missing div in index and changed design config
removed one empty preset from the config

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -37,6 +37,7 @@ permalink: /en/index.html
         </div>
       </section>
     </div>
+  </div>
 
     <div class="row wb-eqht">
       <div class="col-md-6">
