--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -54,6 +54,7 @@ permalink: /fr/index.html
           </div>
         </section>
       </div>
+    </div>
 
     <div class="col-md-6">
       <section class="panel panel-success hght-inhrt">
