--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -18,7 +18,7 @@ permalink: /en/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
+    <p>The Open Resource Exchange includes five main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
   </div>
 
   <div class="row wb-eqht">
@@ -43,14 +43,14 @@ permalink: /en/index.html
       <div class="col-md-6">
         <section class="panel panel-info hght-inhrt">
           <header class="panel-heading">
-            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Design Resources</h5></a>
+            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Design</h5></a>
           </header>
           <div class="panel-body">
             <div class="col-md-3 font-size-50" style="color: #31708f">
               <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
             </div>
             <div class="col-md-9">
-              <p>Search open design resources developed by Canadian public administrations.</p>
+              <p>Search open designs by Canadian public administrations.</p>
             </div>
           </div>
         </section>
