--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -18,7 +18,7 @@ permalink: /fr/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>Cette plateforme offre quatre services principaux basés sur le partage de solutions dans un format source ouverte. Le terme source ouverte réfère aux éléments librement accessibles au public pour des fins d’utilisation, modification et redistribution.</p>
+    <p>Cette plateforme offre cinq services principaux basés sur le partage de solutions dans un format source ouverte. Le terme source ouverte réfère aux éléments librement accessibles au public pour des fins d’utilisation, modification et redistribution.</p>
   </div>
 
   <div class="row wb-eqht">
