--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -50,7 +50,7 @@ permalink: /en/index.html
               <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
             </div>
             <div class="col-md-9">
-              <p>Search open designs by Canadian public administrations.</p>
+              <p>Search open designs used by Canadian public administrations.</p>
             </div>
           </div>
         </section>
