Should fix build error

--- a/_pages/en/open-portal.html
+++ b/_pages/en/open-portal.html
@@ -42,7 +42,7 @@ permalink: en/open-portal.html
             <a href="https://science-libraries.canada.ca/eng/home/" class="panel-design"><h5 class="panel-title">Federal Science Library</h5></a>
           </header>
           <div class="panel-body">
-            <p><strong>Organizations:</strong> 
+            <p><strong>Organizations:</strong> </p>
                 <ul>
                     <li><a href="http://www.agr.gc.ca/eng/home/?id=1395690825741">Agriculture and Agri-Food Canada</a></li>
                     <li><a href="https://www.canada.ca/en/environment-climate-change.html">Environment and Climate Change Canada</a></li>
@@ -52,7 +52,6 @@ permalink: en/open-portal.html
                     <li><a href="https://www.nrcan.gc.ca/home">Natural Resources Canada</a></li>
                     <li><a href="https://www.canada.ca/en/public-health.html">Public Health Agency of Canada</a></li>
                 </ul>
-            </p>
             <p><strong>Description:</strong> The Federal Science Library gives the public access to the libraries of all the above administrations from one portal.</p>
             <p><strong>Link:</strong> <a href="https://science-libraries.canada.ca/eng/home/" target="_blank">https://science-libraries.canada.ca/eng/home/</a></p>
           </div>
