--- a/_pages/fr/portail-ouvert.html
+++ b/_pages/fr/portail-ouvert.html
@@ -42,7 +42,7 @@ permalink: fr/portail-ouvert.html
                 <a href="https://science-libraries.canada.ca/fra/accueil/" class="panel-design"><h5 class="panel-title">Bibliothèque Scientifique Fédérale</h5></a>
               </header>
               <div class="panel-body">
-                <p><strong>Organisations:</strong> 
+                <p><strong>Organisations:</strong></p>
                     <ul>
                         <li><a href="http://www.agr.gc.ca/fra/accueil/?id=1395690825741">Agriculture et Agroalimentaire Canada</a></li>
                         <li><a href="https://www.canada.ca/fr/environnement-changement-climatique.html">Environnement et Changement climatique Canada</a></li>
@@ -52,7 +52,6 @@ permalink: fr/portail-ouvert.html
                         <li><a href="https://www.rncan.gc.ca/accueil">Ressources naturelles Canada</a></li>
                         <li><a href="https://www.canada.ca/fr/sante-publique.html">Agence de la santé publique du Canada</a></li>
                     </ul>
-                </p>
                 <p><strong>Description:</strong> La Bibliothèque Scientifique Fédérale donne accès au public aux bibliothèques des administrations mentionnées plus haut à partir d'un seul portail.</p>
                 <p><strong>Lien:</strong> <a href="https://science-libraries.canada.ca/fra/accueil/" target="_blank">https://science-libraries.canada.ca/fra/accueil/</a></p>
               </div>
