Modified open design section of doc page

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -41,10 +41,10 @@ permalink: /en/docs.html
           <p>You will find a catalog of all the available open designs, where each design is described by the following fields:</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Design</strong>: The name of the open design. A hyperlink is available providing a list of public administrations using this design.</li>
-            <li><strong>Category</strong>: The category to which the open design belongs, according to the design activity domain.</li>
+            <li><strong>Design type</strong>: The category to which the open design belongs, according to the design activity domain.</li>
             <li><strong>Description</strong>: A brief description of the design features.</li>
             <li><strong>License</strong>: The license under which the design is released. Use the hyperlink to access the licence’s file.</li>
-            <li><strong>Usage</strong>: The number of public administrations using the open design.</li>
+            <li><strong>Design use status</strong>: The usage status of the design.</li>
           </ul>
           <p><strong>Use this catalog</strong> to find open solutions that fit your specific needs. To help you with the research process, filtering options are available:</p>
           <ul class="mrgn-bttm-lg">
