--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -41,10 +41,10 @@ permalink: /fr/docs.html
           <p>Vous y trouverez un catalogue (ou une liste autrement dit) contenant tous les designs libres disponibles. Ceux-ci sont brièvement décrits par les champs suivants :</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Design</strong> : Ce champ correspond au nom du design libre. L'hyperlien permet d’afficher une liste des administrations utilisant le design.</li>
-            <li><strong>Catégorie</strong> : Il s’agit de la catégorie à laquelle appartient le design en ce qui concerne son domaine d’utilisation.</li>
+            <li><strong>Type de design</strong> : Il s’agit de la catégorie à laquelle appartient le design en ce qui concerne son domaine d’utilisation.</li>
             <li><strong>Description</strong> : Il s’agit d’une brève description des fonctionnalités du design.</li>
             <li><strong>Licence </strong> : C’est le type de licence sous laquelle le projet est publié. L’hyperlien permet d’accéder au fichier de la licence du projet.</li>
-            <li><strong>Usage</strong> : L’usage correspond au nombre d’administrations ayant validé leur utilisation du design.</li>
+            <li><strong>Statut d'utilisation du design</strong> : Le statut d'usage de ce design.</li>
           </ul>
           <p><strong>Utilisez ce catalogue</strong> pour trouver une solution qui répond à vos besoins. Afin de faciliter la recherche, plusieurs options de filtrage sont à votre disposition :</p>
           <ul class="mrgn-bttm-lg">
