--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ lang: en-fr
 
 					<div class="row">
 						<section class="col-xs-6 text-right">
-							<h2 class="wb-inv">{{ site.title.en }}</h2>
+							<h2 class="wb-inv">{{ site.head.title.en }}</h2>
 							<p><a href="./en/index.html" class="btn btn-primary">English</a></p>
 						</section>
 
 						<section class="col-xs-6" lang="fr">
-							<h2 class="wb-inv">{{ site.title.fr }}</h2>
+							<h2 class="wb-inv">{{ site.head.title.fr }}</h2>
 							<p><a href="./fr/index.html" class="btn btn-primary">Français</a></p>
 						</section>
 					</div>
