--- a/_pages/en/open-design.html
+++ b/_pages/en/open-design.html
@@ -5,7 +5,7 @@ lang: en
 permalink: /en/open-design.html
 ---
 
-<h1 property="name" id="wb-cont">Open Design Resources</h1>
+<h1 property="name" id="wb-cont">Open Designs</h1>
 <p>Open design refers to a design for a physical or software product released under a license granting anyone permission to use, modify or redistribute it.</p>
 <p>Search the catalog for open design resource by different levels of Canadian public .</p>
 <p>You may also <strong>add</strong> a resource or <strong>update</strong> its data using using the <a href="./open-design-form.html">Open Design Resource Form</a>.</p>
