--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -46,7 +46,7 @@ permalink: /en/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #3c763d">
-            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"><span style="visibility:hidden;">Open Source Software</span></i></a>
+            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"><span class="hiddenText">Open Source Software</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Search open source software used by Canadian public administrations.</p>
@@ -65,7 +65,7 @@ permalink: /en/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #8a6d3b">
-            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"><span style="visibility:hidden;">Open Standards</span></i></a>
+            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"><span class="hiddenText">Open Standards</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Search open standards used by Canadian public administrations.</p>
@@ -81,7 +81,7 @@ permalink: /en/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #a94442">
-            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"><span style="visibility:hidden;">Partnerships</span></i></a>
+            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"><span class="hiddenText">Partnerships</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Search and collaborate on open source projects looking for partners and investors.</p>
@@ -99,7 +99,7 @@ permalink: /en/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #31708f">
-            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"><span style="visibility:hidden;">Open Design</span></i></a>
+            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"><span class="hiddenText">Open Design</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Search open designs used by Canadian public administrations.</p>
