--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -29,7 +29,7 @@ permalink: /fr/index.html
         </header>
         <div class="panel-body mrgn-bttm-md">
           <div class="col-md-3 font-size-50" style="color: #31708f">
-            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
+            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"><span class="hiddenText">Code source ouvert</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Consultez les projets source ouverts développés par les niveaux du Gouvernement Canadien.</p>
@@ -47,7 +47,7 @@ permalink: /fr/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #3c763d">
-            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
+            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"><span class="hiddenText">Logiciels libres</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Consultez les logiciels libres utilisés par les niveaux du Gouvernement Canadien.</p>
@@ -65,7 +65,7 @@ permalink: /fr/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #8a6d3b">
-            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
+            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"><span class="hiddenText">Normes ouvertes</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Consultez les normes ouvertes utilisées par les niveaux du Gouvernement Canadien.</p>
@@ -81,7 +81,7 @@ permalink: /fr/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #a94442">
-            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"></i></a>
+            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"><span class="hiddenText">Partenariats</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Consultez et collaborer sur les projets source ouverts en recherche de partenaires et d'investisseurs.</p>
@@ -99,7 +99,7 @@ permalink: /fr/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #31708f">
-            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
+            <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"><span class="hiddenText">Design Libres</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Consultez les design libres utilisés par les niveaux du Gouvernement Canadien.</p>
