--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -29,7 +29,7 @@ permalink: /en/index.html
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #31708f">
-            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"><span style="visibility:hidden;">Open Source Code</span></i></a>
+            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"><span class="hiddenText">Open Source Code</span></i></a>
           </div>
           <div class="col-md-9">
             <p>Search open source projects developed by Canadian public administrations.</p>
