--- a/_pages/fr/dependances.html
+++ b/_pages/fr/dependances.html
@@ -2,7 +2,7 @@
 layout: default
 ref: dependencies
 lang: fr
-permalink: /fr/dependencies.html
+permalink: /fr/dependances.html
 ---
 <h1 property="name" id="wb-cont">Dépendances des projets de code source ouvert</h1>
 <p>Parcourir les dépendances associées au répertoires de code source ouvert des administrations publiques canadiennes, du niveau fédéral, provincial, municipal et autochtone</p>
