--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -15,10 +15,10 @@ permalink: /en/index.html
   </div>
 </div>
 
-{% if site.active_emergency %}
-<div class="row profile alert alert-danger">
-  <h1 property="name">Responding to {{ site.active_emergency_name }}</h1>
-  <p>The Open Resource Exchange is looking to support the open sharing and collaboration on Technology resources related to {{ site.active_emergency_name }}.</p>
+{% if site.active_campaign %}
+<div class="row profile alert alert-{{site.active_campaign_style}}">
+  <h1 property="name">Responding to {{ site.active_campaign_name }}</h1>
+  <p>The Open Resource Exchange is looking to support the open sharing and collaboration on Technology resources related to {{ site.active_campaign_name }}.</p>
   <p>To search for resources related please click <a href="{{ site.data.i18n.general.nav.emergency.link[page.lang] }}">here</a>.</p>
 </div>
 {% endif %}
