--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -15,10 +15,10 @@ permalink: /fr/index.html
   </div>
 </div>
 
-{% if site.active_emergency %}
-<div class="row profile alert alert-danger">
-  <h1 property="name">Répondre à {{ site.active_emergency_name }}</h1>
-  <p>L'Échange de ressources ouvert cherche à soutenir le partage ouvert et la collaboration sur les ressources technologiques liées à {{ site.active_emergency_name }}.</p>
+{% if site.active_campaign %}
+<div class="row profile alert alert-{{site.active_campaign_style}}">
+  <h1 property="name">Répondre à {{ site.active_campaign_name }}</h1>
+  <p>L'Échange de ressources ouvert cherche à soutenir le partage ouvert et la collaboration sur les ressources technologiques liées à {{ site.active_campaign_name }}.</p>
   <p>Pour rechercher des ressources liées, veuillez cliquer <a href="{{ site.data.i18n.general.nav.emergency.link[page.lang] }}">ici</a>.</p>
 </div>
 {% endif %}
