Fix footer Bug - Upgrade WET and always use latest verstion

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@ lang: en-fr
 		<meta name="dcterms.language" lang="fr" title="ISO639-2" content="fra">
 		<meta name="robots" content="noindex, follow">
 		<!--[if gte IE 9 | !IE ]><!-->
-		<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="icon" type="image/x-icon">
-		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/theme.min.css">
+		<link href="{{ site.wet_cdts_hosturl }}/assets/favicon.ico" rel="icon" type="image/x-icon">
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/css/theme.min.css">
 		<!--<![endif]-->
-		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/messages.min.css">
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/css/messages.min.css">
 		<!--[if lt IE 9]>
-				<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="shortcut icon" />
-				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/messages-ie.min.css" />
-				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/ie8-theme.min.css" />
+				<link href="{{ site.wet_cdts_hosturl }}/assets/favicon.ico" rel="shortcut icon" />
+				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/css/messages-ie.min.css" />
+				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/css/ie8-theme.min.css" />
 				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-				<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew.min.js"></script>
+				<script src="{{ site.wet_cdts_hosturl }}/js/ie8-wet-boew.min.js"></script>
 				<![endif]-->
 		<!--[if lte IE 9]><![endif]-->
 
-		<noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/noscript.min.css" /></noscript>
+		<noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/css/noscript.min.css" /></noscript>
 		<!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 		<script>dataLayer1 = [];</script>
 		<!-- End Google Tag Manager -->
@@ -47,7 +47,7 @@ lang: en-fr
 		<!-- End Google Tag Manager -->
 
 		<div id="bg">
-			<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sp-bg-2.jpg" alt="Blurry mountains / Montagnes floues">
+			<img src="{{ site.wet_cdts_hosturl }}/assets/sp-bg-2.jpg" alt="Blurry mountains / Montagnes floues">
 		</div>
 
 		<main role="main">
@@ -56,7 +56,7 @@ lang: en-fr
 					<h1 property="name" class="wb-inv">Canada-ca</h1>
 					<div class="row">
 						<div class="col-xs-11 col-md-8">
-							<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-spl.svg" width="283" alt="Government of Canada / Gouvernement du Canada">
+							<img src="{{ site.wet_cdts_hosturl }}/assets/sig-spl.svg" width="283" alt="Government of Canada / Gouvernement du Canada">
 						</div>
 					</div>
 
@@ -80,7 +80,7 @@ lang: en-fr
 						</div>
 
 						<div class="col-xs-5 col-md-4 text-right mrgn-bttm-md">
-							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-spl.svg" width="127" aria-label="Symbol of the Government of Canada / Symbole du gouvernement du Canada"></object>
+              <img src="{{ site.wet_cdts_hosturl }}/assets/wmms-blk.svg" alt="Symbol of the Government of Canada / Symbole du gouvernement du Canada"/>
 						</div>
 					</div>
 				</div>
@@ -89,11 +89,11 @@ lang: en-fr
 
 		<!--[if gte IE 9 | !IE ]><!-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/wet-boew.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/js/wet-boew.min.js"></script>
 		<!--<![endif]-->
 		<!--[if lt IE 9]>
-			<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
+			<script src="{{ site.wet_cdts_hosturl }}/js/ie8-wet-boew2.min.js"></script>
 		<![endif]-->
-		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/js/theme.min.js"></script>
 	</body>
 </html>
