jQuery version number in 404 and index

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@ permalink: /404.html
 </div>
 </main>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/{{ site.jquery_version }}/jquery.js"></script>
 <script src="{{ site.wet_cdts_hosturl }}/js/wet-boew.min.js"></script>
 <script src="{{ site.wet_cdts_hosturl }}/js/theme.min.js"></script>
 </body>
