--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ lang: en-fr
 			</div>
 		</main>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/{{ site.jquery_version }}/jquery.js"></script>
 		<script src="{{ site.wet_cdts_hosturl }}/js/wet-boew.min.js"></script>
 		<script src="{{ site.wet_cdts_hosturl }}/js/theme.min.js"></script>
 	</body>
