--- a/404.html
+++ b/404.html
@@ -1,9 +1,8 @@
 ---
 permalink: /404.html
 ---
-<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
