--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ ref: index
 lang: en-fr
 ---
 
-<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en"><![endif]--><!--[if gt IE 8]><!-->
+<!DOCTYPE html>
 <html lang="en">
 <!--<![endif]-->
 	<head>
